Fixed Possible contrast issues

--- a/chamber/styles/directory-small.css
+++ b/chamber/styles/directory-small.css
@@ -42,6 +42,14 @@
         column-gap: .8rem;
         padding: 10px 0 10px 16px;
         background: var(--navy-blue);
+        color: var(--white-col);
+    }
+
+    header h1,
+    header h2,
+    header h3 {
+        color: var(--white-col);
+        
     }
 
     header img {
